--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
     -webkit-appearance: none;
-    margin: 0;
+    
+}
+
+#age {
+   width:100px;
 }
